--- a/themes/fab/msie.css
+++ b/themes/fab/msie.css
@@ -7,7 +7,9 @@
 
 .rela {filter: alpha(opacity=67);}
 a.showit:hover > span {filter: alpha(opacity=85);}
-.ltr {text-align: left;}
+.itr {right: 5px;}
+.itr:hover .popup {top: 20px;}
+
 
 
 
