--- a/themes/webtrees/msie.css
+++ b/themes/webtrees/msie.css
@@ -23,4 +23,5 @@ form {
 a.showit:hover > span {
 	filter: alpha(opacity=85);
 }
-
+.itr {right: 5px;}
+.itr:hover .popup {top: 20px;}
